# repo-chat

./: .gitignore
backend/: constants.py  pyproject.toml
backend/app/api/routers/: chat.py
backend/app/utils/: index.py  repo.py  repomap.py
backend/data/pickled_docs/: colehpage-llm_test-MAIN-docs.pkl
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: chat-section.tsx  header.tsx
frontend/app/components/ui/chat/: chat-avatar.tsx  chat-input.tsx  chat-item.tsx  chat-messages.tsx
frontend/app/css/: fonts.css  global.css  styles.css
