[tool.poetry]
name = "llamaindex-fastapi-streaming"
version = "0.1.0"
description = ""
authors = ["Marcus Schiesser <mail@marcusschiesser.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
llama-index = "^0.9.8"
pypdf = "^3.17.0"
python-dotenv = "^1.0.0"
chromadb = "^0.4.18"
langchain = "^0.0.348"
llama-hub = "^0.0.55.post1"
sentence-transformers = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
